add support for BZ2, fix tar file support